--- a/package.json
+++ b/package.json
@@ -6,14 +6,19 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "docs:dev": "vitepress dev docs",
+    "docs:build": "vitepress build docs",
+    "docs:preview": "vitepress preview docs"
   },
   "dependencies": {
     "bootstrap": "^5.3.7",
     "vue": "^3.5.18"
   },
   "devDependencies": {
+    "@rollup/rollup-win32-x64-msvc": "^4.47.1",
     "@vitejs/plugin-vue": "^6.0.1",
-    "vite": "^7.1.0"
+    "vite": "^7.1.0",
+    "vitepress": "^2.0.0-alpha.12"
   }
 }
